--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://unpkg.com/swagger-ui-dist@5/swagger-ui.css"
     />
 
-    <title>Open API Swagger</title>
+    <title>GeoJson</title>
   </head>
 
   <body>
